--- a/www/templates/home.twig
+++ b/www/templates/home.twig
@@ -4,5 +4,12 @@
 
 {% block content %}
     <h1>Hello world!</h1>
-    <p>I'm {{username}}</p>
+
+    {% if notifications is not empty %}
+        <ol>
+            {% for notification in notifications %}
+                <li>{{ notification }}</li>
+            {% endfor %}
+        </ol>
+    {% endif %}
 {% endblock %}
